added font link

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta property="og:description" content="Awnings masters has the exact expertise to give you awning solutions which are not only an absolute visual delight but also of unmatched quality." />
       <link rel="shorcut icon" href="images/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="css/accordion.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
     <!--  <script type="text/javascript" src="js/jquery.parallax-1.1.3.js"></script> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
