--- a/index.html
+++ b/index.html
@@ -347,20 +347,24 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
     
     <div class="parallax-window" data-parallax="scroll" data-image-src="patio1/drop arm awnings 1.jpg">
     <h1 style="padding-top: 3em; padding-bottom: 3em; color: #fff; text-align: center; margin: auto; display: block;"">Our Products</h1><br>
-  </div>
+
+
+    <!-- The Gallery as inline carousel, can be positioned anywhere on the page -->
+    <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+        <div class="slides"></div>
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+    </div>
+    </div>
  
 <!--gallery-->
+<!-- <div class="container-fluid">
 
-<h2>Carousel image gallery</h2>
-<!-- The Gallery as inline carousel, can be positioned anywhere on the page -->
-<div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="play-pause"></a>
-    <ol class="indicator"></ol>
-</div>
+</div> -->
+
 <!--gallery-->
 <div id="links" style="display: none;">
     <a href="patio1/vertical awning 2.jpg" title="Vertical">
