--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
 
 
     <!-- The Gallery as inline carousel, can be positioned anywhere on the page -->
-    <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+    <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel blueimp-gallery-display blueimp-gallery-playing blueimp-gallery-controls" style="display: block;">
         <div class="slides"></div>
         <h3 class="title"></h3>
         <a class="prev">‹</a>
