added carousel finallY

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/blueimp-gallery-indicator.css">
     <link rel="stylesheet" href="css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/blueimp-gallery.min.css.map">
-    <link rel="stylesheet" type="text/css" href="css/demo.css">
+    <link rel="stylesheet" href="css/demo.css">
     
    
 
@@ -345,7 +345,7 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
     </section>
   </div>
     
-    <div class="parallax-window" data-parallax="scroll" data-image-src="patio1/drop arm awnings 1.jpg">
+  <div class="parallax-window" data-parallax="scroll" data-image-src="patio1/drop arm awnings 1.jpg">
     <h1 style="padding-top: 3em; padding-bottom: 3em; color: #fff; text-align: center; margin: auto; display: block;"">Our Products</h1><br>
 
 
@@ -358,7 +358,7 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
         <a class="play-pause"></a>
         <ol class="indicator"></ol>
     </div>
-    </div>
+  </div>
  
 <!--gallery-->
 <!-- <div class="container-fluid">
@@ -689,7 +689,12 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
   
 });
    </script>
+   <script src="js/blueimp-helper.js"></script>
+
+<script src="js/blueimp-gallery-fullscreen.js"></script>
 <script src="js/blueimp-gallery.min.js"></script>
+<script src="js/blueimp-gallery-indicator.js"></script>
+
 
 <script>
 blueimp.Gallery(
