--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                              <!--  <img src="images/banners/index_hero_graphics.png" class="img-responsive hero-1 hidden-lg hidden-sm hidden-md"> -->
                               <div class="headerBtns">
                                 <a class="btn btn1" href="#intro" >Discover More</a>
-                                <a class="btn btn-cta" href="">get started</a>
+                                <a class="btn btn-cta typeform-share button" href="https://awningmasters.typeform.com/to/LKOcRX" data-mode="drawer_left">get started</a>
                               </div>
                           </div>
                       </div>
@@ -654,7 +654,7 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
       <h5 class="text-center">A smooth and hassle free installation from our trained staff.  You get a complete mechanical support during and after installation.<br>Call us at ___________ to book a free visit by Awningmaster experts.</h5>
 <!--       <a class="btn getButton text-uppercase" data-toggle="modal" data-target="#myModal">get in touch</a> -->
      
-      <a class="typeform-share button" href="https://awningmasters.typeform.com/to/LKOcRX" data-mode="drawer_left" style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Contact Us</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+      <a class="typeform-share button" href="https://awningmasters.typeform.com/to/LKOcRX" data-mode="drawer_left" style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Contact Us</a><br><br> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
 
   </section>
