--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,8 @@
 			<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 footer-text-center">
-					<a href="index-2.html" onclick=backTomain()><img class="mainLogo footer-logo" src="images/pitch-logo.svg" alt="Awning Masters">
+					<p style="color: white;">Email: contact@awningmasters.in</p>
+					<a href="index.html" onclick=backTomain()><img class="mainLogo footer-logo" src="images/white-logo.png" alt="Awning Masters">
 					</a>
 					<br>
 					<!-- <ul class="presentation-links list-unstyled">
@@ -49,10 +50,8 @@
 		</footer>
 		<footer class="thin-footer">
             <div class="container">
+                
                 <section class="left-cont">
-                  <h6>A product by &nbsp; <img src="images/.png"></h6>
-                </section>
-                <section class="right-cont">
                   <h5>Copyright © Awning Masters. All Rights Reserved.</h5>
                 </section>
             </div>
