added live chat

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                               </div>
                           </div>
                       </div>
-                      <div class="hero_img hidden-xs hero-right">
+                      <div class="hero_img hero-right">
                         <!-- <img src="images/banners/index_hero_graphics.png" class="img-responsive"> -->
                                   <!--animation svg start -->
                               <svg class="img-responsive" x="0px" y="0px" width="800px" height="477.7px" viewBox="0 0 800 477.7">
@@ -838,6 +838,16 @@ blueimp.Gallery(
     }
 );
 </script>
+
+<!--Start of Zendesk Chat Script-->
+<script type="text/javascript">
+window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+_.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+$.src="https://v2.zopim.com/?4tc9MLYxBUWoM21P7nr5SgzqHonSODNS";z.t=+new Date;$.
+type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+</script>
+<!--End of Zendesk Chat Script-->
 
 
 <!--     <script>
