--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 footer-text-center">
 					<p style="color: white;">Email: contact@awningmasters.in</p>
-					<a href="index.html" onclick=backTomain()><img class="mainLogo footer-logo" src="images/white-logo.png" alt="Awning Masters">
+					<a href="index.html" onclick=backTomain()><img class="mainLogo footer-logo" src="images/white-logo.pngw" alt="Awning Masters">
 					</a>
 					<br>
 					<!-- <ul class="presentation-links list-unstyled">
