--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <span class=icon-bar></span>
                             <span class=icon-bar></span>
                         </button>
-                        <a onclick=backTomain() class=navbar-brand><img class=mainLogo src="images/pitch-logo.png" alt="Awning Masters">
+                        <a onclick=backTomain() class=navbar-brand><img class=mainLogo src="images/logo.png" alt="Awning Masters">
                         </a>
                     </div>
                     <div class="collapse login navbar-collapse" id=navbarCollapse>
@@ -354,13 +354,13 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
 
 <!--gallery-->
 <div id="links" style="display: none;">
-    <a href="patio1/drop arm awning 2.jpg" title="">
+    <a href="patio1/drop arm awning 2.jpg" title="Drop Arm Awning">
         <img src="patio1/drop arm awning 2.jpg" alt="">
     </a>
-    <a href="patio1/drop arm awnings 1.jpg" title="">
+    <a href="patio1/drop arm awnings 1.jpg" title="Drop Arm Awning">
         <img src="patio1/drop arm awnings 1.jpg" alt="">
     </a>
-    <a href="patio1/Awning with drop 2.jpg" title="">
+    <a href="patio1/Awning with drop 2.jpg" title="Awning with Drop">
         <img src="patio1/Awning with drop 2.jpg" alt="">
     </a>
     <a href="patio1/vertical awning 2.jpg" title="Vertical Awning">
@@ -379,7 +379,7 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
         <img src="patio1/tensile membrane3.jpg" alt="">
     </a>
     <a href="patio1/tensile membrane structures 1.jpg" title="Tensile membrane Structures">
-        <img src="patio1/tensile membrane3.jpg" alt="awning with drop">
+        <img src="patio1/tensile tensile membrane structures 1.jpg" alt="awning with drop">
     </a>
     <a href="patio1/Awning with drop 1.jpg" title="Awning with drop">
         <img src="patio1/Awning with drop 1.jpg" alt="awning with drop">
@@ -387,36 +387,36 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
     <a href="patio1/awning-1.jpg" title="">
         <img src="patio1/awning-1.jpg" alt="">
     </a>
-    <a href="patio1/basket awning 1.jpg" title="">
+    <a href="patio1/basket awning 1.jpg" title="Basket Awning">
         <img src="patio1/basket awning 1.jpg" alt="">
     </a>
-    <a href="patio1/basket awning 2.jpg" title="">
+    <a href="patio1/basket awning 2.jpg" title="Basket Awning">
         <img src="patio1/basket awning 2.jpg" alt="">
     </a>
-    <a href="patio1/basket awning 3.jpg" title="">
+    <a href="patio1/basket awning 3.jpg" title="Basket Awning">
         <img src="patio1/basket awning 3.jpg" alt="">
     </a>
 
-    <a href="patio1/diplomat 1.jpg" title="">
+    <a href="patio1/diplomat 1.jpg" title="Diplomat">
         <img src="patio1/diplomat 1.jpg" alt="">
     </a>
-    <a href="patio1/diplomat 2.jpg" title="">
+    <a href="patio1/diplomat 2.jpg" title="Diplomat">
         <img src="patio1/diplomat 2.jpg" alt="">
     </a>
 
-    <a href="patio1/Garden Awning 2.jpg" title="">
+    <a href="patio1/Garden Awning 2.jpg" title="Garden Awning">
         <img src="patio1/Garden Awning 2.jpg" alt="">
     </a>
-    <a href="patio1/Garden Awning 3.jpg" title="">
+    <a href="patio1/Garden Awning 3.jpg" title="Garden Awning">
         <img src="patio1/Garden Awning 3.jpg" alt="">
     </a>
-    <a href="patio1/garden awnings.jpg" title="">
+    <a href="patio1/garden awnings.jpg" title="Garden Awning">
         <img src="patio1/garden awnings.jpg" alt="">
     </a>
-    <a href="patio1/duchess-1.jpg" title="">
+    <a href="patio1/duchess-1.jpg" title="Duchess">
         <img src="patio1/diplomat 2.jpg">
     </a>
-     <a href="patio1/duchess-2.jpg" title="">
+     <a href="patio1/duchess-2.jpg" title="Duchess">
         <img src="patio1/duchess-2.jpg">
     </a>
      <a href="patio1/patio 1.jpg" title="">
@@ -425,15 +425,38 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
      <a href="patio1/patio3.jpg" title="">
         <img src="patio1/patio3.jpg">
     </a>
-     <a href="patio1/sail shade 1.jpg" title="">
+     <a href="patio1/sail shade 1.jpg" title="Sail Shade">
         <img src="patio1/sail shade 1.jpg">
     </a>
-     <a href="patio1/Visage 1.jpg" title="">
+     <a href="patio1/Visage 1.jpg" title="Visage">
         <img src="patio1/Visage 1.jpg">
     </a>
-     <a href="patio1/visage 2.jpg" title="">
+     <a href="patio1/visage 2.jpg" title="Visage">
         <img src="patio1/visage 2.jpg">
     </a> 
+     <a href="patio1/visage 2.jpg" title="Visage">
+        <img src="patio1/visage 2.jpg">
+    </a> 
+
+     <a href="patio1/duchess-1.jpg" title="Duchess">
+        <img src="patio1/duchess-1.jpg">
+    </a> 
+     <a href="patio1/fixed awning styles 1.jpg" title="Fixed Awning Styles">
+        <img src="patio1/fixed awning styles 1.jpg">
+    </a> 
+     <a href="patio1/garden awnings.jpg" title="Garden Awnings">
+        <img src="patio1/garden awnings.jpg">
+    </a> 
+     <a href="patio1/Vertical awning 4.jpg" title="Vertical Awning">
+        <img src="patio1/Vertical awning 4.jpg">
+    </a> 
+     <a href="patio1/tensile membrane 2.jpg" title="Tensile Membranes">
+        <img src="patio1/tensile membrane 2.jpg">
+    </a> 
+     <a href="patio1/tensile membranes 2.jpg" title="Tensile Membranes">
+        <img src="patio1/tensile membranes 2.jpg">
+    </a> 
+
 
    
         
