--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       </div>
                       <div class="hero_img hero-right">
                         
-                              <svg class="img-responsive hidden-sm" x="0px" y="0px" width="800px" height="477.7px" viewBox="0 0 800 477.7">
+                              <svg class="img-responsive hidden-sm hidden-xs" x="0px" y="0px" width="800px" height="477.7px" viewBox="0 0 800 477.7">
                               <g id='building'>
                               <g id="foundation">
                                 <path fill="#E3E5E8" d="M592.6,475h-290v-18c0-1.1,0.9-2,2-2h286c1.1,0,2,0.9,2,2V475z"/>
@@ -258,7 +258,60 @@
         </div>
         <img class="arrow-down" id="down-arrow" onclick="scrollTo()" src="images/arrow-down.png">
   </div>
+  <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                      <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#mycarousel" data-slide-to="1"></li>
+                      <li data-target="#mycarousel" data-slide-to="2"></li>
+                      <li data-target="#mycarousel" data-slide-to="3"></li>
+                      <li data-target="#mycarousel" data-slide-to="4"></li>
+                    </ol>
 
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                      <div class="item">
+                          <img src="images/image1.jpg" data-color="lightblue" alt="First Image">
+                          <div class="carousel-caption">
+                              <h3>First Image</h3>
+                          </div>
+                      </div>
+                      <div class="item">
+                          <img src="images/image2.jpg" data-color="firebrick" alt="Second Image">
+                          <div class="carousel-caption">
+                              <h3>Second Image</h3>
+                          </div>
+                      </div>
+                      <div class="item">
+                          <img src="images/image3.jpg" data-color="violet" alt="Third Image">
+                          <div class="carousel-caption">
+                              <h3>Third Image</h3>
+                          </div>
+                      </div>
+                      <div class="item">
+                          <img src="images/image4.jpg" data-color="lightgreen" alt="Fourth Image">
+                          <div class="carousel-caption">
+                              <h3>Fourth Image</h3>
+                          </div>
+                      </div>
+                      <div class="item">
+                          <img src="images/image5.jpg" data-color="tomato" alt="Fifth Image">
+                          <div class="carousel-caption">
+                              <h3>Fifth Image</h3>
+                          </div>
+                      </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+            </div>
 
   <div class="container powerpoint-group" id="goto">
      
@@ -727,7 +780,7 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
       <br>
       <h5 class="text-center">A smooth and hassle free installation from our trained staff.  You get a complete mechanical support during and after installation.<br>Call us at (+91) 9891120000 to book a free visit by Awningmaster experts.</h5>
 <!--       <a class="btn getButton text-uppercase" data-toggle="modal" data-target="#myModal">get in touch</a> -->
-     <a class="typeform-share button" href="tel:+919891120000"  style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;">Call Us</a><br>
+     <a class="button" href="tel:+919891120000"  style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;">Call Us</a><br>
       <a class="typeform-share button" href="https://awningmasters.typeform.com/to/LKOcRX" data-mode="drawer_left" style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Drop us a message</a><br><br> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
 
@@ -772,8 +825,7 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
 
     $("div").css("display", "none");
 
-    bodega
-      .to(
+    bodega.to(
         [
           "#roof",
           "#secondFlr",
@@ -846,6 +898,33 @@ blueimp.Gallery(
 );
 </script>
 <script type="text/javascript">
+  var $item = $('.carousel .item'); 
+  var $wHeight = $(window).height();
+  $item.eq(0).addClass('active');
+  $item.height($wHeight); 
+  $item.addClass('full-screen');
+
+  $('.carousel img').each(function() {
+    var $src = $(this).attr('src');
+    var $color = $(this).attr('data-color');
+    $(this).parent().css({
+      'background-image' : 'url(' + $src + ')',
+      'background-color' : $color
+    });
+    $(this).remove();
+  });
+
+  $(window).on('resize', function (){
+    $wHeight = $(window).height();
+    $item.height($wHeight);
+  });
+
+  $('.carousel').carousel({
+    interval: 6000,
+    pause: "false"
+  });
+</script>
+<script type="text/javascript">
   $(document).ready(function() {
     // Configure/customize these variables.
     var showChar = 100;  // How many characters are shown by default
@@ -883,6 +962,7 @@ blueimp.Gallery(
     });
 });
 </script>
+<script type="text/javascript" href="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
 <!--Start of Zendesk Chat Script-->
 <script type="text/javascript">
 window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
