--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/blueimp-gallery.min.css.map">
     <link rel="stylesheet" href="css/demo.css">
-    <<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.7/slick.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.7/slick.min.css">
     
    
 
@@ -349,8 +349,8 @@
       <section class="col-lg-6 col-md-6 col-sm-12 col-xs-12 optimize-cont">
       <br>
       <p style="text-align: left; font-size: 1.2em;">Our Acrylic fabrics – Fabrics made from 100 % solution-dyed acrylic fibre, are designed especially for the preparation of awnings. The acrylic fabrics offer high levels of UV protection, Ultraviolet Protection Factor (UPF) of up to +80 according to international standard UV Standard 801.</p>
-<p style="text-align: left; font-size: 1.4em;">The fabric goes through finishing Process that offers exceptional repellency to water and dirt, superior dimensional stability, and creates a durable fabric that keeps its aesthetic allure over the lifetime.
-We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
+      <p style="text-align: left; font-size: 1.4em;">The fabric goes through finishing Process that offers exceptional repellency to water and dirt, superior dimensional stability, and creates a durable fabric that keeps its aesthetic allure over the lifetime.</p>
+<p>We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
       </section>
 
  
@@ -1069,7 +1069,8 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
    <div class="headerBtns">
     
 
-     <a class="btn btn1" style="background-color: #fff; color: #fd3b5d;" href="tel:+919891120000">Call Us</a><!-- 
+     <a class="btn btn1" style="background-color: #fff; color: #fd3b5d;" href="tel:+919891120000">Call Us</a>
+     <!-- 
       <a class="typeform-share btn btn1" href="https://awningmasters.typeform.com/to/LKOcRX" data-mode="drawer_left" target="_blank">Drop us a message</a><br><br> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> -->
       <a class="btn btn1" style="background-color: #fff; color: #fd3b5d;" href="mailto:contact@awningmasters.in">Drop us an email</a>
       </div>
@@ -1178,7 +1179,7 @@ We offer upto 10 Years Warranty on selected Fabrics*</p><br><br>
 
 <script src="js/blueimp-gallery-fullscreen.js"></script>
 <script src="js/blueimp-gallery.min.js"></script>
-<script src="js/blueimp-gallery-indicator.js"></script>
+
 
 
 <script>
