--- a/index.html
+++ b/index.html
@@ -324,6 +324,10 @@
       <div>
         <div class="img--holder img-responsive" style="background-image: url(images/carousel/pic5.jpg);"></div>
       </div>
+      <div>
+        <div class="img--holder img-responsive" style="background-image: url(Drop-Shade-201.jpg);"></div>
+      </div>
+      
   </div>
   <!-- /#slick -->
   </div>
