--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
             </div> -->
 
   <div class="container-fluid optmize-group">
-    <div id="slick" data-slick='{"mobileFirst": true}'>
-      <div>
+    <div id="slick">
+      <div> 
         <div class="img--holder" style="background-image: url(images/carousel/pic1.jpg);"></div>
       </div>
      
@@ -1097,10 +1097,7 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
    <script type="text/javascript" src="js/carousel.js"></script>
    <script type="text/javascript" src="js/slick.js"></script>
-   <script type="text/javascript">
-     $(#slick).slick()
-   </script>
-    
+
     <script>
           $(function(){
              $(".element").typed({
