--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name=viewport>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Awning Masters</title>
+    <title>Awning Masters | Best discounts on offer</title>
     <meta name="description" content="Awnings masters has the exact expertise to give you awning solutions which are not only an absolute visual delight but also of unmatched quality."/>
     <meta property="og:title" content="Awning Masters - Beautify!  That’s what we do." />
     <meta property="og:description" content="Awnings masters has the exact expertise to give you awning solutions which are not only an absolute visual delight but also of unmatched quality." />
@@ -65,7 +65,7 @@
                             <span class=icon-bar></span>
                             <span class=icon-bar></span>
                         </button> -->
-                        <a onclick=backTomain() class=navbar-brand><img class=mainLogo src="images/logo.png" alt="Awning Masters">
+                        <a onclick=backTomain() class=navbar-brand><img class=mainLogo src="images/logo_final.png" alt="Awning Masters">
                         </a>
                     </div>
                     <div class="collapse login navbar-collapse" id=navbarCollapse>
@@ -104,7 +104,7 @@
                              <!--  <img src="images/banners/index_hero_graphics.png" class="img-responsive hero-1 hidden-lg hidden-sm hidden-md"> -->
                               <div class="headerBtns">
                                 <a class="btn btn1" href="#goto">Awning styles</a>
-                                <a class="btn btn-cta button" href="+919870234999">Call us now</a>
+                                <a class="btn btn-cta button" href="tel:+919870234999">Call us now</a>
                               </div>
                           </div>
                       </div>
