--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                       <div class="hero-Left ">
                           <div class="content content-small-device animated fadeInLeft">
                               <h1 class=title-content>
-                                <span class="font-style-1">Awning Masters</span><br>
-                                <span class="font-style-2">Beautify! That’s what we do.</span><br>
+                                <span class="font-style-1" style="color: #fd3b5d;">Awning Masters</span><br>
+                                <span class="font-style-2">beautify! That’s what we do.</span><br>
                               </h1>
                               <p>We have the exact expertise to give you awning solutions which are not only an absolute visual delight but also of unmatched quality.<br>
-                              Call us at <a href="tel:+919870234999">(+91) 9870234999</a> to book a free visit by Awning master experts.</p>
+                              Call us at <a href="tel:+919870234999">(+91) 9870234999</a> to book a free visit by Awning Master experts.</p>
 
                     
                               <!--animation svg end -->
