--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                           <div class="content content-small-device animated fadeInLeft">
                               <h1 class=title-content>
                                 <span class="font-style-1" style="color: #fd3b5d;">Awning Masters</span><br>
-                                <span class="font-style-2">beautify! That’s what we do.</span><br>
+                                <span class="font-style-2">beautify outdoors! That’s what we do.</span><br>
                               </h1>
                               <p>We have the exact expertise to give you awning solutions which are not only an absolute visual delight but also of unmatched quality.<br>
                               Call us at <a href="tel:+919870234999">(+91) 9870234999</a> to book a free visit by Awning Master experts.</p>
